Revision history for Perl extension Shlomif::NavMenu.

    - Fixed a bug in HTML::Widgets::NavMenu::Url:
    relative URL from a non-dir to a dir. It accidently had an
    extraneous "../".

1.0001    Mon Sep 11 14:38:39 IDT 2006
    - Added "use strict" and "use warnings" to all modules.
    - Added a Test::Pod based test.
    - Added a Test::Pod::Coverage test, and added POD to all modules.
        - Some internal methods were prefixed with an underscore.
    - Added the examples directory.

1.0000    Sun Nov 06 16:01:00 IST 2005
    - Made sure that the breadcrumbs trail in expanded sections will
    display the components of the expanded sections.
    - Fixed the POD.
    - Added the link to the article to the POD.
    - Bumped the major version number to 1.x and kept some digits into the
    future to make CPAN and CPAN.pm happy.

0.10.2    Wed Aug 24 20:37:55 IST 2005
    (backdated - module was released on 17-August-2005)
    - Added IO::Scalar to the Perl modules this module depends on. (it
    is needed by the tests, but was not explicitly specified yet, because
    it was believed to be part of the core distribution).
    
0.10.1    Mon Jul 25 17:19:05 IST 2005
    - Fixed the building using "perl Makefile.PL" and "make".

0.10.0    Tue Jul 12 20:45:40 IST 2005
    - Added tests and refactored the code to have a 100% test coverage.
    
0.8.0     Sat Apr 23 12:48:40 IST 2005
    - get_cross_host_rel_url is now part of the API.
    - Now returning nav_links_obj
    - Added some tests

0.6.0     Thu Mar 24 15:15:40 IST 2005
    - no longer making use of the CGI.pm module.
    - extracted two methods in HTML::Widgets::NavMenu::Iterator::NavMenu
      that can now be over-rided by the user.

0.4.0     Thu Jan 20 16:49:15 IST 2005
    - Added the url_is_abs option to the nodes.
    - Many code cleanups.
    
0.2.0     Sun Jan  2 19:37:41 IST 2005
    - First non-developer CPAN Release.
