@@ -749,6 +749,41 @@ my @with_skips_nav_menu =
     },
 );
 
+my @root_path_not_slash =
+(
+    'current_host' => "default",
+    'hosts' => { 'default' => { 'base_url' => "http://www.hello.com/" }, },
+    'tree_contents' =>
+    {
+        'host' => "default",
+        'text' => "Top 1",
+        'title' => "T1 Title",
+        'subs' =>
+        [
+            {
+                'text' => "Home",
+                'url' => "puzzles/",
+                subs =>
+                [
+                    {
+                        url => "puzzles/foo/",
+                        'text' => "The Foo Puzzle",
+                    },
+                    {
+                        url => "puzzles/bar/",
+                        text => "The Bar Puzzle",
+                    },
+                ],
+            },
+            {
+                'text' => "About Me",
+                'title' => "About Myself",
+                'url' => "puzzles/me/",
+            },
+        ],
+    },
+);
+
 
 sub get_test_data
 {
@@ -769,6 +804,7 @@ sub get_test_data
             'mixed_expand_menu' => \@mixed_expand_nav_menu,
             'special_chars_menu' => \@special_chars_nav_menu,
             'with_skips' => \@with_skips_nav_menu,
+            'root_path_not_slash' => \@root_path_not_slash,
         };
 }
 
